Bug 1119277 - Remove the process CPU priority parameter and simplify all the associated code. r=khuey, r=dhylands